--- a/ArtApp/index.html
+++ b/ArtApp/index.html
@@ -6,7 +6,7 @@
 
      		Note that we have all this in one file, keeping it simple for now, and you load this into your browswer to try it!
 	-->
-	<title>Art Example</title>
+	<title>Fine Art Example</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
